# genai-dev-assistant

./: .gitignore  DEPLOYMENT.md  FIXES.md  INTEGRATIONS.md  MARKETPLACE_DEPLOY.md  QUICKSTART.md  README.md  REFERENCE.md  SECURITY.md  SETUP.md  START_HERE.md  TROUBLESHOOTING.md  VSCODE_SETUP.md  pyproject.toml  requirements.txt
aws_lambda/: agent.py  handler.py  retriever.py
cli/: ask.py
extensions/jetbrains/: build.gradle.kts
extensions/jetbrains/src/main/kotlin/com/genai/: GenAIClient.kt  GenAISettings.kt  SearchAction.kt
extensions/vim/: README.md
extensions/vim/autoload/: genai.vim
extensions/vim/plugin/: genai.vim
extensions/vscode/: .vscodeignore  INSTALL.sh  README.md  deploy.sh  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
infra/: template.yaml
ingestion/: chunker.py  embedder.py  pipeline.py
scripts/: deploy.sh  diagnose.sh  fix-common-issues.sh  health-check.sh  run-all.sh  setup-env.sh  test-api.sh  test-ingestion.sh
tests/integration/: test_e2e.py
tests/unit/: test_agent.py  test_chunker.py  test_retriever.py
utils/: config.py  github_integration.py  validation.py
