[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-dev-assistant"
version = "0.1.0"
description = "AI-powered CLI for asking questions about your codebases using RAG and Amazon Bedrock"
requires-python = ">=3.9"
authors = [{name = "Developer", email = "saitarrunpitta@gmail.com"}]

dependencies = [
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.1.0",
    "pinecone-client>=3.0.0",
    "boto3>=1.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I"]
